Centering elements -FR

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--The Famous Pringles Man Header-->
     <div>
-        <h1>This is the famous Pringles Man!</h1>
+        <h1 class="famous">This is the famous Pringles Man!</h1>
     </div>
     <!--Pringles Man Area-->
     <div class="container"><!--Contains or borders all elements of the face-->
